--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.1.0",
     "react-vertical-timeline-component": "^3.6.0",
